--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 body{
     background-color: #e2e2e2;
 }
-p, a{
+p, a, pre{
     display: block;
     padding: 10px;
     margin: 10px;
@@ -21,4 +21,26 @@ a{
     color:#e2e2e2;
     background-color: blue;
     text-decoration: none;
+}
+.question{
+    color:#e2e2e2;
+    background-color: blue;
+    margin-bottom: 1px;
+    border-radius: 4px 4px 0 0;
+    font-size: 22px;
+}
+.hint{
+    color:#e2e2e2;
+    background-color: rgb(0, 109, 109);
+    margin-bottom: 1px;
+    margin-top: 1px;
+    border-radius: 0;
+    font-size: 18px;
+}
+.answer{
+    color:#e2e2e2;
+    background-color: #121212;
+    margin-top: 1px;
+    border-radius: 0 0 4px 4px;
+    font-size: 18px;
 }
