--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
+:root {--pri: #DC143C;--sec: #EC244C;--font: #DC143Caa;}
 *{
     padding:0;
     margin:0;
-    font-family: Bree Serif, sans-serif;
+    font-family: "Bree Serif", sans-serif;
 }
 body{
-    background-color: #e2e2e2;
+    background-color: var(--sec);
 }
 p, a, pre{
     display: block;
@@ -12,38 +13,44 @@ p, a, pre{
     margin: 10px;
     font-size: 25px;
     color: #121212;
-    background-color: yellow;
+    background-color: #f7f7f7;
     box-shadow: 0px 0px 3px 1px #0004;
     border: 1px solid #0002;
     border-radius: 4px;
 }
 a{
-    color:#e2e2e2;
-    background-color: blue;
+    color:#f4f4f4;
+    background-color: var(--pri);
     text-decoration: none;
-}
-.question{
-    color:#e2e2e2;
-    background-color: blue;
-    margin-bottom: 1px;
-    border-radius: 4px 4px 0 0;
-    font-size: 22px;
-}
-.hint{
-    color:#e2e2e2;
-    background-color: rgb(0, 109, 109);
-    margin-bottom: 1px;
-    margin-top: 1px;
-    border-radius: 0;
-    font-size: 18px;
-}
-.answer{
-    color:#e2e2e2;
-    background-color: #121212;
-    margin-top: 1px;
-    border-radius: 0 0 4px 4px;
-    font-size: 18px;
 }
 pre{
     overflow-x: auto;
+}
+div{
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.btn{
+    padding: 10px 14px;
+    font-size: 20px;
+    margin: 10px 10px 25px 10px;
+    box-shadow: 0px 0px 3px 1px #0004;
+    border: 1px solid #0002;
+    border-radius: 4px;
+    cursor: pointer;
+    width: 100%;
+}
+.no-style{
+    display: inline;
+    font-size: 20px;
+    padding: 0;
+    margin: 0;
+    font-weight: bold;
+    color: #121212;
+    background-color: #f7f7f700;
+    box-shadow: 0px 0px 3px 1px #0000;
+    border: none;
+    border-radius: 0;
 }
